--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/serbanghita/jQuery-Chess.git
 [submodule "jQM-dynamic-popup"]
 	path = jQM-dynamic-popup
-	url = git://github.com/serbanghita/jQM-dynamic-popup.git
+	url = https://github.com/serbanghita/jQM-dynamic-popup.git
